Added registration for both iOS and Android

--- a/Maui/Maui.csproj
+++ b/Maui/Maui.csproj
@@ -82,4 +82,17 @@
       <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <MauiXaml Update="Pages\RegistrationPage.xaml">
+        <SubType>Designer</SubType>
+      </MauiXaml>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Pages\RegistrationPage.xaml.cs">
+        <DependentUpon>RegistrationPage.xaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
+    </ItemGroup>
+
 </Project>
